@@ -1,2 +1,4 @@
+   -- Add rename command.
+
 0.01
    -- Initial module creation.
